<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnFlechaRegreso"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/flecha_regresar"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problema_uno"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitud"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_90_90"
            android:inputType="numberSigned|numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longitud"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_180_180"
            android:inputType="numberSigned|numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btnMostrarClima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mostrar_clima" />

        <ListView
            android:id="@+id/lvClimaPorHora"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal|vertical" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>