<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnFlechaRegreso"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/flecha_regresar"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problema_cuatro"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvTamañoMatriz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tama_o_de_la_matriz"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etTamañoMatriz"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvRotaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotaciones"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etRotaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits='"0123456789,-"'
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvInstruccionRotacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruccion_rotaciones"
            android:textSize="12sp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvCoordenadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coordenadas"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/x_igual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/X_igual"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etCoordenadaX"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/y_igual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/Y_igual"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etCoordenadaY"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btnMostrarNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mostrar_n_mero" />

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvResultado4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>