<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnFlechaRegreso"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/flecha_regresar"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problema_tres"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvAñoInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_o_inicio"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etAnioInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvAñoFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_o_fin"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etAnioFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btnMostrarAnioBisiesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mostrar_a_os_bisiestos" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvRespuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>