<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/flechaRegresoUno"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/flecha_regresar"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problema_siete"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tvTamañoMatrizEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tama_o_de_la_matriz"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etTamañoMatrizEntrada"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btnMostrarCaminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mostrar_caminos" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>